Simplify some assertions, remove casts from Val