@@ -16,12 +16,12 @@ import afs.nodes.event.EventNode;
 import afs.nodes.expr.*;
 import afs.nodes.stmt.*;
 import afs.nodes.type.TypeIntNode;
-import afs.nodes.type.TypeListNode;
 import afs.nodes.type.TypeNode;
-import afs.nodes.type.TypeVoidNode;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.function.Executable;
+import setup.ASTGenerator;
 
 import java.util.List;
 
@@ -86,35 +86,31 @@ public class StmtInterpreterTest {
         var result = StmtInterpreter.evalStmt(envV, envF, envE, location, composition, store, imgStore);
 
         // Result should be return value 5
-        Val retVal = (Val) result.getValue0();
+        Val retVal = result.getValue0();
         assertInstanceOf(IntVal.class, retVal, "Return value should be IntVal");
         assertEquals(new IntVal(5), retVal, "Return value should be 5");
 
         // Store should reflect x = 5
-        Val storedX = (Val) result.getValue1().lookup(location);
+        Val storedX = result.getValue1().lookup(location);
         assertEquals(new IntVal(5), storedX, "Stored value of x should be 5");
-
-
-
     }
 
     @Test
     public void StmtDeclarationNodeTest(){
-        // Declare int x = 50;
-        ExprNode expr = new ExprIntNode("50",0,0);
-        StmtNode skip = new StmtSkipNode();
-        TypeNode type = new TypeIntNode(0,0);
-        String varName = "x";
-        StmtNode stmt = new StmtDeclarationNode(type, varName, expr, skip, 0,0);
+        // Arrange
+        String type = "int";
+        String varName = "testVarX";
+        int testValue = 50;
+        String testInput = String.format("%s %s = %d;", type, varName, testValue);
+        StmtNode stmt = ASTGenerator.parseStmt(testInput);
 
-        var result = StmtInterpreter.evalStmt(envV, envF, envE, location, stmt, store, imgStore);
+        // Act
+        StmtInterpreter.evalStmt(envV, envF, envE, location, stmt, store, imgStore);
 
-        location = envV.lookup(varName);
-        Val val = (Val) result.getValue1().lookup(location);
-        assertEquals(new IntVal(50), val, "Expected 50");
-
-
-
+        // Assert
+        Val val = store.lookup(location);
+        assertInstanceOf(IntVal.class, val);
+        assertEquals(testValue, val.asInt());
     }
 
 
@@ -123,7 +119,7 @@ public class StmtInterpreterTest {
         @Test
         public void StmtFunctionNode(){
 
-            // Setup function parmeter x
+            // Setup function parameter x
             String paramName =  "x";
             TypeNode type = new TypeIntNode(0,0);
             List<Param> params = List.of ( new Param(type,paramName,0,0));
@@ -144,8 +140,8 @@ public class StmtInterpreterTest {
             DefNode functionDef = createFunction(type, funcName, params, funcBody, eventName, eventArgs);
 
 
-            // Evaluate the function declaration to register it in function enviroment
-            var defResult = DefInterpreter.evalDef(envV, envF, envE, location, functionDef, store, imgStore);
+            // Evaluate the function declaration to register it in function environment
+            DefInterpreter.evalDef(envV, envF, envE, location, functionDef, store, imgStore);
 
 
             // Create function call increment(6)
@@ -156,165 +152,146 @@ public class StmtInterpreterTest {
             var callResult = StmtInterpreter.evalStmt(envV, envF, envE, location, funcCall, store, imgStore);
 
             // Get the return value
-            Val returnVal = (Val) callResult.getValue0();
+            Val returnVal = callResult.getValue0();
 
             // Your assertions here, for example:
             assertNotNull(returnVal);
-            assertTrue(returnVal instanceof IntVal);
+            assertInstanceOf(IntVal.class, returnVal);
             assertEquals(7, ((IntVal) returnVal).getValue());
 
         }
 
         @Test
-        public void StmtFunctionPassByValueNode(){
-
-            /// Declare a variable: int x = 5
+        public void StmtFunctionPassByValueNode_LiteralPassed(){
+            // Arrange
             String varName = "x";
-            envV.declare(varName, location);
-            IntVal val = new IntVal(5);
-            store.bind(location, val);
+            int initialVal = 5;
+            String input = String.format(
+                    "int %s = %d;\n" +
+                    "\n" +
+                    "fn void increment(int x) {\n" +
+                    "    %s = %s + 1;\n" +
+                    "}\n" +
+                    "\n" +
+                    "visualize increment(1):\n" +
+                    "    a do b();", varName, initialVal, varName, varName);
+            DefNode def = ASTGenerator.parseDef(input);
 
-            // Define a function with param x (int), return type void
-            String paramName = "x";
-            TypeNode paramType = new TypeIntNode(0, 0);
-            List<Param> params = List.of(new Param(paramType, paramName, 0, 0));
+            // Act
+            DefInterpreter.evalDef(envV, envF, envE, location, def, store, imgStore);
 
-            // Function body: x = x + 1; (but no return, and return type is void)
-            ExprNode one = new ExprIntNode("1", 0, 0);
-            ExprNode xIdentifier = new ExprIdentifierNode(paramName, 0, 0);
-            ExprNode addExpr = new ExprBinopNode(xIdentifier, BinOp.ADD, one, 0, 0);
-            StmtNode assignment = new StmtAssignmentNode(paramName, addExpr, 0, 0);
-
-            // No return statement, just a side-effect inside the function
-            StmtNode funcBody = assignment;
-
-            // Define the function increment(x: Int): Void
-            String funcName = "incrementVoid";
-            String eventName = "ev1";
-            List<ExprNode> eventArgs = List.of(new ExprIntNode("2", 0, 0));
-
-            TypeNode voidType = new TypeVoidNode(0, 0);
-            DefNode functionDef = createFunction(voidType, funcName, params, funcBody, eventName, eventArgs);
-
-            // Register the function in the environment
-            DefInterpreter.evalDef(envV, envF, envE, location, functionDef, store, imgStore);
-
-            // Call incrementVoid(x)
-            List<ExprNode> args = List.of(new ExprIdentifierNode(varName, 0, 0));
-            StmtNode funcCall = new StmtFunctionCallNode(funcName, args, 0, 0);
-
-            // Evaluate the function call
-            var callResult = StmtInterpreter.evalStmt(envV, envF, envE, location, funcCall, store, imgStore);
-
-            // The function is void, so return value should be null or VoidVal
-            Val returnVal = (Val) callResult.getValue0();
-            assertTrue(returnVal == null, "Expected null return from void function");
-
-            // Check that the original variable 'x' was NOT changed (pass-by-value)
-            IntVal finalVal = (IntVal) store.lookup(location);
-            assertEquals(5, finalVal.getValue(), "Expected variable x to remain unchanged due to pass-by-value");
-
+            // Assert
+            Val finalVal = store.lookup(location);
+            assertEquals(initialVal, finalVal.asInt(), "Expected the value not to be changed");
         }
 
         @Test
-        public void StmtFunctionCallPassByReferenceNode(){
-
-            String vizFuncName = "logListLength";
-            String vizParamName = "n";
-            TypeNode listType = new TypeListNode(new TypeIntNode(0, 0), 0, 0); // List<Int>
-            List<Param> vizParams = List.of(new Param(listType, vizParamName, 0, 0));
-
-            // Body: skip or some dummy action (here: skip, as we may not have print support)
-            StmtNode vizBody = new StmtSkipNode();
-
-            // Declare n = 5
-            String n = "n";
-            envV.declare(n, location);
-
-            store.bind(location, new IntVal(5));
-
-
-            // Create function definition with void return type
-            TypeNode voidType = new TypeVoidNode(0,0);
-            String funcName = "incrementFirst";
-            String eventName = "ev1";
-            List<ExprNode> eventArgs =  List.of(new ExprIdentifierNode(n, 0, 0));
-
-
-            EventNode eventDecl = new EventDeclarationNode(eventName, vizFuncName, eventArgs, 0, 0);
-            DefNode visualize = new DefVisualizeNode(vizFuncName, eventArgs, eventDecl, 0, 0);
-
-            DefNode vizFunction = new DefFunctionNode(voidType, vizFuncName, vizParams, vizBody,
-                    visualize,0,0);
-
-            // Register it
-            DefInterpreter.evalDef(envV, envF, envE, location, vizFunction, store, imgStore);
-
-            // Declare list variable x = [1, 3]
+        public void StmtFunctionPassByValueNode_IdentifierPassed(){
+            // Arrange
             String varName = "x";
-            location = declareList(varName, List.of(
-                    new ExprIntNode("1", 0, 0),
-                    new ExprIntNode("3", 0, 0)
-            ));
+            int initialVal = 5;
+            String input = String.format(
+                    "int %s = %d;\n" +
+                    "\n" +
+                    "fn void increment(int x) {\n" +
+                    "    %s = %s + 1;\n" +
+                    "}\n" +
+                    "\n" +
+                    "visualize increment(x):\n" +
+                    "    a do b();", varName, initialVal, varName, varName);
+            DefNode def = ASTGenerator.parseDef(input);
 
-            Val originalList = store.lookup(location);
-            assertEquals(1, originalList.asList().get(0).asInt());
-            assertEquals(3, originalList.asList().get(1).asInt());
-            System.out.println("Original list stored at location: " + location);
+            // Act
+            DefInterpreter.evalDef(envV, envF, envE, location, def, store, imgStore);
 
-            // Function parameter: list x (type is list of int)
-            String paramName = "x";
+            // Assert
+            Val finalVal = store.lookup(location);
+            assertEquals(initialVal, finalVal.asInt(), "Expected the value not to be changed");
+        }
 
-            TypeNode type = new TypeListNode(new TypeIntNode(0, 0), 0, 0); // List<Int>
-            List<Param> params = List.of(new Param(type, paramName, 0, 0));
-            // DEBUG: Verify parameter type
-            assertTrue(params.get(0).getType() instanceof TypeListNode,
-                    "Parameter should be list type");
+        @Test
+        public void StmtFunctionPassByReference_IdentifierPassed(){
+            // Arrange
+            String varName = "x";
+            int value0 = 4, value1 = 5;
+            String listValue = String.format("[%d, %d]", value0, value1);
+            ExprNode exprNode = ASTGenerator.parseExpr(listValue);
+            String input = String.format(
+                    "[int] %s = [1, 2, 3];\n" +
+                    "\n" +
+                    "fn void increment([int] x) {\n" +
+                    "    %s = %s;\n" +
+                    "}\n" +
+                    "\n" +
+                    "visualize increment(x):\n" +
+                    "    a do b();", varName, varName, listValue);
+            DefNode def = ASTGenerator.parseDef(input);
 
+            // Act
+            Val listVal = ExprInterpreter.evalExpr(envV, envF, envE, location, exprNode, store, imgStore).getValue0();
+            DefInterpreter.evalDef(envV, envF, envE, location, def, store, imgStore);
 
-            // Function body: x[0] = x[0] + 1 (increment first element)
-            ExprNode indexExpr = new ExprIntNode("0", 0, 0);
-            ExprNode elemAtZero = new ExprListAccessNode(paramName, List.of(indexExpr), 0, 0);
-            ExprNode one = new ExprIntNode("1", 0, 0);
-            ExprNode newVal = new ExprBinopNode(elemAtZero, BinOp.ADD, one, 0, 0);
-            StmtNode assignment = new StmtListAssignmentNode(paramName, List.of(indexExpr), newVal, 0, 0);
+            // Assert
+            Val finalVal = store.lookup(location);
+            assertEquals(listVal.asList().size(), finalVal.asList().size(), "Expected the value to be changed");
+            assertEquals(value0, listVal.asList().getFirst().asInt());
+            assertEquals(value1, listVal.asList().getLast().asInt());
+        }
 
-            // Function return type void (no return statement)
-            StmtNode funcBody = assignment; // just the assignment, no return
+        @Test
+        public void StmtFunctionPassByReference_IdentifierIndexPassed(){
+            // Arrange
+            String varName = "x";
+            String listValue = "[4, 5, 9]";
+            String input = String.format(
+                    "[[int]] %s = [[1, 2, 3],[6,7]];\n" +
+                    "\n" +
+                    "fn void increment([[int]] x) {\n" +
+                    "    %s[0] = %s;\n" +
+                    "}\n" +
+                    "\n" +
+                    "visualize increment(x[1]):\n" +
+                    "    a do b();", varName, varName, listValue);
+            DefNode def = ASTGenerator.parseDef(input);
 
+            // Act
+            Executable action = () -> DefInterpreter.evalDef(envV, envF, envE, location, def, store, imgStore);
 
-            DefNode functionDef =  new DefFunctionNode(voidType, funcName, params, funcBody, vizFunction, 0, 0);
+            // Assert
+            Exception exception = assertThrows(RuntimeException.class, action);
+            assertTrue(
+                    exception.getMessage().contains("Arrays are call-by-reference - cannot pass an array literal or an index of an array"),
+                    "Expected error as x[1] cannot be looked up in the environment"
+            );
+        }
 
-            // Register the function in the environment
-            DefInterpreter.evalDef(envV, envF, envE, location, functionDef, store, imgStore);
+        @Test
+        public void StmtFunctionPassByReference_LiteralArrayPassed(){
+            // Arrange
+            String varName = "x";
+            String listValue = "[4, 5, 9]";
+            String input = String.format(
+                    "[int] %s = [1, 2, 3];\n" +
+                    "\n" +
+                    "fn void increment([int] x) {\n" +
+                    "    %s = %s;\n" +
+                    "}\n" +
+                    "\n" +
+                    "visualize increment([7,8,10]):\n" +
+                    "    a do b();", varName, varName, listValue);
+            DefNode def = ASTGenerator.parseDef(input);
 
-            // Call function incrementFirst(x)
-            List<ExprNode> args = List.of(new ExprIdentifierNode(varName, 0, 0));
-            // DEBUG: Verify argument is identifier node
-            assertInstanceOf(ExprIdentifierNode.class, args.getFirst(), "Argument must be variable reference");
-            assertEquals(varName, ((ExprIdentifierNode)args.getFirst()).getIdentifier());
+            // Act
+            Executable action = () -> DefInterpreter.evalDef(envV, envF, envE, location, def, store, imgStore);
 
-            StmtNode funcCall = new StmtFunctionCallNode(funcName, args, 0, 0);
-
-            // Evaluate the function call (should modify list x in place)
-            var callResult = StmtInterpreter.evalStmt(envV, envF, envE, location, funcCall, store, imgStore);
-
-
-
-            // Since function is void, return value should be null
-            Val returnVal = (Val) callResult.getValue0();
-            assertTrue( returnVal == null, "Expected null since void retun type");
-
-            // Check that the list x was modified: x[0] == 2 now (1 + 1)
-            Val updatedList = store.lookup(location);
-            List<Val> elements = updatedList.asList();
-
-            assertEquals(2, ((IntVal) elements.get(0)).getValue(), "Expected first element incremented");
-            assertEquals(3, ((IntVal) elements.get(1)).getValue(), "Expected second element unchanged");
-
+            // Assert
+            Exception exception = assertThrows(RuntimeException.class, action);
+            assertTrue(
+                    exception.getMessage().contains("Arrays are call-by-reference - cannot pass an array literal or an index of an array"),
+                    "Expected error as x[1] cannot be looked up in the environment"
+            );
         }
     }
-
 
     @Test
     public void StmtIfNodeTest(){
@@ -332,7 +309,7 @@ public class StmtInterpreterTest {
         StmtNode ifStmt = new StmtIfNode(bool,thenStmt,elseStmt,0,0);
 
         var result = StmtInterpreter.evalStmt(envV, envF, envE, location, ifStmt, store, imgStore);
-        Val value =  (Val) result.getValue1().lookup(location);
+        Val value = result.getValue1().lookup(location);
         assertEquals(new IntVal(1), value, "Expected 1");
 
 
@@ -402,7 +379,7 @@ public class StmtInterpreterTest {
             assertEquals(2, outerElements.size(), "Outer list size should remain 2");
 
             // First row should be unchanged: [1, 2]
-            Val firstRow = outerElements.get(0);
+            Val firstRow = outerElements.getFirst();
             List<Val> firstRowElems = firstRow.asList();
             assertEquals(new IntVal(1), firstRowElems.get(0), "Unchanged element in first row, first column");
             assertEquals(new IntVal(2), firstRowElems.get(1), "Unchanged element in first row, second column");
@@ -433,10 +410,7 @@ public class StmtInterpreterTest {
             StmtNode listAssignment = new StmtListAssignmentNode(varName, indexExprs, newVal, 0, 0);
 
             // Assert exception thrown
-            assertThrows(IndexOutOfBoundsException.class, () -> {
-                StmtInterpreter.evalStmt(envV, envF, envE, location, listAssignment, store, imgStore);
-            }, "Expected out-of-bounds assignment to throw IndexOutOfBoundsException");
-
+            assertThrows(IndexOutOfBoundsException.class, () -> StmtInterpreter.evalStmt(envV, envF, envE, location, listAssignment, store, imgStore), "Expected out-of-bounds assignment to throw IndexOutOfBoundsException");
         }
 
     }
@@ -449,9 +423,9 @@ public class StmtInterpreterTest {
 
         // Evaluate return statment
         var result = StmtInterpreter.evalStmt(envV, envF, envE, location, returnStmt, store, imgStore);
-        Val returnVal =  (Val) result.getValue0();
+        Val returnVal =  result.getValue0();
 
-        assertTrue(returnVal instanceof IntVal, "Returned value should be IntVal");
+        assertInstanceOf(IntVal.class, returnVal, "Returned value should be IntVal");
         assertEquals(new IntVal(10), returnVal, "Returned value should be 10");
 
     }
@@ -492,7 +466,7 @@ public class StmtInterpreterTest {
         StmtNode whileStmt = new StmtWhileNode(condition,body,0,0);
         var result = StmtInterpreter.evalStmt(envV, envF, envE, location, whileStmt, store, imgStore);
 
-        Val finalVal = (Val) result.getValue1().lookup(location);
+        Val finalVal = result.getValue1().lookup(location);
         assertEquals(new IntVal(3), finalVal, "Expected 3");
 
     }
